2006-02-08  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Fixed bug #2365: Replace true linebreaks with space inside block tags and after hr tags in t3lib_parsehtml_proc.
	* Changes to the htmlArea RTE extension (see details in local ChangeLog)

2006-02-08  Michael Stucki  <michael@typo3.org>

	* Various changes to indexed_search, see local ChangeLog for details
	* !!! Changed default value of TYPO3_CONF_VARS[BE][fileCreateMask/folderCreateMask]. By default, those files are no longer writable for the group.
	* Fixed bug #2272: Added [PAGE].includeJS plus possibility to attach .js files to template resources (thanks to Johannes Vockeroth)
	* Fixed bug #75: t3lib_extfilefunc::func_copy() does not set file permissions properly
	* Encode whitespaces in t3lib_div::encodeHeader() as required by RFC 2047 (thanks to Stanislas)
	* Added crdate and tstamp fields to be selected by users in the Web->List view
	* Fixed bug #2200: In FEediting the creation of new records in other pages than the current should be possible

2006-02-07  Ingmar Schlecht <ingmar@typo3.org>

	* Fix "&amp;" problem in DMail jumpURLs

2006-02-06  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Fix bugtracker issue #408: enable direct mail to fetch https pages with user authentification

2006-02-06  Sebastian Kurfuerst  <sebastian@garbage-group.de>

	* New feature: Integrated ss_dragdrop extension into the core (page and folder drag and drop). Thanks to Stephane Schitter for his work on this.

2006-02-05  Dmitry Dulepov  <typo3@accio.lv>

	* Fix: (Versioning sysext) Two cells in table had hard-coded bgcolor attribute (were not skinnable)

2006-02-04  Sebastian Kurfuerst  <sebastian@garbage-group.de>

	* Fixed a minor logical bug in undo/history
	* Made SU-mode work again (was affected by hook name change)

2006-02-02  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Adjustments to the htmlArea RTE extension (see details in local ChangeLog)
